<resources>
    <string name="app_name">HDRescuer</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="btn_login">Acceder STANDARD MODE</string>
    <string name="txt_info_login">Accede a la app con el email y contraseña que obtuviste del equipo de desarrollo</string>
    <string name="app_name_login">HDRESCUER</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Abrir Navegación</string>
    <string name="navigation_drawer_close">Cerrar Navegacion</string>
    <string name="nav_header_title">HDRESCUER</string>
    <string name="nav_header_subtitle">Recopilación de datos médicos</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_users">Usuarios</string>
    <string name="menu_support">Información</string>
    <string name="menu_config">Configuración</string>
    <string name="menu_sessions">Sesiones FastMode</string>
    <string name="label_last_monitoring">Última Sesión Sincr.</string>
    <string name="label_edad">Edad:</string>
    <string name="label_altura">Altura:</string>
    <string name="label_peso">Peso:</string>
    <string name="label_genero">Género:</string>
    <string name="label_email">Email:</string>
    <string name="label_phone">Teléfono:</string>
    <string name="btn_edit_data">Editar</string>
    <string name="btn_new_monitoring">Nueva Sesión</string>
    <string name="label_data_new_monitoring">Nueva monitorización</string>


    <string name="accel">Acelerómetro</string>
    <string name="accel_x">x:</string>
    <string name="accel_y">y:</string>
    <string name="accel_z">z:</string>
    <string name="bvp_label">BVP:</string>
    <string name="eda_label">EDA:</string>
    <string name="ibi_label">IBI:</string>
    <string name="emptyText">-</string>
    <string name="temp_label">Temperatura (piel):</string>
    <string name="battery_label">Batería:</string>
    <string name="label_e4band">Empatica 4 Band</string>
    <string name="label_watch_monitoring">Tic Watch Pro</string>
    <string name="btn_start_monitoring">Comenzar monitorización</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_monitoring_e4band">E4Band</string>
    <string name="tab_monitoring_watch">Tic Watch Pro</string>
    <string name="tab_monitoring_oix">Oxímetro</string>
    <string name="btn_stop_monitoring">Terminar monitorizacion</string>
    <string name="label_HR">HR:</string>
    <string name="label_GSR" />
    <string name="label_gsr">GSR:</string>
    <string name="label_watch_acc_gravity">Acelerómetro con Gravedad</string>
    <string name="labelwatch_acc_linear">Aceleración Lineal</string>
    <string name="label_watch_gir">Giroscopio</string>
    <string name="label_hr_watch">Heart Rate:</string>
    <string name="tvhrppgraw">Heart Rate Raw:</string>
    <string name="label_steps">Pasos realizados:</string>
    <string name="label_hb_watch">Heart Beat:</string>
    <string name="label_new_username">Nombre:</string>
    <string name="label_phone2">Teléfono 2:</string>
    <string name="label_address">Dirección:</string>
    <string name="label_city">Ciudad:</string>
    <string name="label_cp">C.P.:</string>
    <string name="label_tasa_muestreo">Sample Rate (Tasa de muestreo)</string>
    <string name="label_desc_sample_rate">La tasa de muestreo indica el intervalo de tiempo entre cada medición de datos (en ms).</string>
    <string name="sr_150">150</string>
    <string name="label_ehealthboard">Placa eHealth2.0</string>
    <string name="label_last_monitoring_users">Última sesión:</string>
    <string name="session_time_label_users">Duración:</string>
    <string name="label_no_sessions_for_user">No hay sesiones sincronizadas para este usuario</string>
    <string name="label_info_credits">Información sobre la aplicación</string>
    <string name="label_info_developedby">Developed by:</string>
    <string name="label_app_name">HDRescuer</string>
    <string name="label_developer_name">Domingo J. López Pacheco</string>
    <string name="label_version">1.0</string>
    <string name="label_repository">https://github.com/DomingoLopez</string>
    <string name="label_info_contact">domingo6891@correo.ugr.es</string>
    <string name="label_info_credits_credits">Créditos y atribuciones</string>
    <string name="label_icons_made">Iconos realizados por</string>
    <string name="label_icons_obtain">obtenidos desde</string>
    <string name="label_icon_freepik">Freepik</string>
    <string name="label_icon_Flaticon">Flaticon</string>
    <string name="label_result_session">Resultados de la sesión</string>
    <string name="label_results_for_ticwatch">Resultados para TicWatch</string>
    <string name="label_results_for_empatica">Resultados para Empatica Band</string>
    <string name="label_results_for_healthboard">Resultados para Health Board</string>
    <string name="label_sessions_not_synchronized">Aquí aparecen las sesiones guardadas en el modo \'Fast Mode\'. Es recomendable sincronizarlas con el servidor.</string>
    <string name="btn_synchronize_session">Sincronizar sesión</string>
    <string name="tv_description_app_login">Recopilación de datos fisiológicos de pacientes</string>
    <string name="btn_login_no_conection">Acceder FAST MODE</string>

    <string name="dialog_confirm">Confirmar</string>
    <string name="dialog_dismiss">Cancelar</string>

    <string name="icon_connection_ok">Conexión</string>

</resources>