<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_users">

    <fragment
        android:id="@+id/nav_users"
        android:name="com.hdrescuer.hdrescuer.ui.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.hdrescuer.hdrescuer.ui.ui.support.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/nav_config"
        android:name="com.hdrescuer.hdrescuer.ui.ui.config.ConfigFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_config" />
</navigation>