<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.support.SupportFragment">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/label_info_credits"
        android:textColor="@color/blue_secondary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_info_credits_credits"
        android:textColor="@color/blue_secondary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_info_developedby"
        android:textColor="@color/blue_secondary"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/label_app_name"
        app:layout_constraintBottom_toBottomOf="@+id/textView29"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/label_developer_name"
        app:layout_constraintBottom_toBottomOf="@+id/textView26"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toTopOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="App name:"
        android:textColor="@color/blue_secondary"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="App version:"
        android:textColor="@color/blue_secondary"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/label_version"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintStart_toEndOf="@+id/textView30"
        app:layout_constraintTop_toTopOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Contact:"
        android:textColor="@color/blue_secondary"
        app:layout_constraintStart_toStartOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Repository:"
        android:textColor="@color/blue_secondary"
        app:layout_constraintStart_toStartOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/tvgithub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/label_repository"
        android:textColor="@color/blue_top_mini_bar"
        app:layout_constraintBottom_toBottomOf="@+id/textView33"
        app:layout_constraintStart_toEndOf="@+id/textView33"
        app:layout_constraintTop_toTopOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/label_info_contact"
        app:layout_constraintBottom_toBottomOf="@+id/textView32"
        app:layout_constraintStart_toEndOf="@+id/textView32"
        app:layout_constraintTop_toTopOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_icons_made"
        app:layout_constraintStart_toStartOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/tvFreepik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/label_icon_freepik"
        android:textColor="@color/blue_top_mini_bar"
        app:layout_constraintBottom_toBottomOf="@+id/textView37"
        app:layout_constraintStart_toEndOf="@+id/textView37"
        app:layout_constraintTop_toTopOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/label_icons_obtain"
        app:layout_constraintBottom_toBottomOf="@+id/tvFreepik"
        app:layout_constraintStart_toEndOf="@+id/tvFreepik"
        app:layout_constraintTop_toTopOf="@+id/tvFreepik" />

    <TextView
        android:id="@+id/tvFlaticons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/label_icon_Flaticon"
        android:textColor="@color/blue_top_mini_bar"
        app:layout_constraintStart_toStartOf="@+id/textView37"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

</androidx.constraintlayout.widget.ConstraintLayout>