<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.userdetails.UserDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back_new_monitoring"
        android:layout_width="51dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/tvUserNameToolbarMonitoring"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textAlignment="viewStart"
        android:textColor="@color/blue_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_back_new_monitoring"
        app:layout_constraintTop_toTopOf="@+id/btn_back_new_monitoring" />

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="132dp"
        android:layout_height="150dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/img"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <TextView
        android:id="@+id/label_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_edad"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/user_avatar"
        app:layout_constraintTop_toTopOf="@+id/user_avatar" />

    <TextView
        android:id="@+id/label_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_peso"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/user_avatar"
        app:layout_constraintTop_toBottomOf="@+id/label_altura" />

    <TextView
        android:id="@+id/label_genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/label_genero"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/user_avatar"
        app:layout_constraintTop_toBottomOf="@+id/label_peso" />

    <TextView
        android:id="@+id/label_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/label_altura"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/user_avatar"
        app:layout_constraintTop_toBottomOf="@+id/label_edad" />

    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_email"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/user_avatar"
        app:layout_constraintTop_toBottomOf="@+id/user_avatar" />

    <TextView
        android:id="@+id/label_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_phone"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label_email"
        app:layout_constraintTop_toBottomOf="@+id/label_email" />

    <TextView
        android:id="@+id/label_last_monitoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="36dp"
        android:text="@string/label_last_monitoring"
        android:textAlignment="textStart"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_new_monitoring"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_edit_data"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_edit_data"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        app:icon="@drawable/edit_user_data_2"
        app:layout_constraintStart_toStartOf="@+id/label_phone"
        app:layout_constraintTop_toBottomOf="@+id/label_phone" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/label_edad"
        app:layout_constraintTop_toTopOf="@+id/label_edad" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/label_altura"
        app:layout_constraintTop_toTopOf="@+id/label_altura" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/label_peso"
        app:layout_constraintTop_toTopOf="@+id/label_peso" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/label_genero"
        app:layout_constraintTop_toTopOf="@+id/label_genero" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/label_email"
        app:layout_constraintTop_toTopOf="@+id/label_email" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/label_phone"
        app:layout_constraintTop_toTopOf="@+id/label_phone" />

    <TextView
        android:id="@+id/tvLastMonitoring"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_last_monitoring"
        app:layout_constraintTop_toTopOf="@+id/label_last_monitoring" />

    <Button
        android:id="@+id/btn_new_monitoring"
        android:layout_width="233dp"
        android:layout_height="47dp"
        android:layout_marginTop="452dp"
        android:text="@string/btn_new_monitoring"
        android:textSize="12sp"
        app:icon="@drawable/ic_add_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />


</androidx.constraintlayout.widget.ConstraintLayout>