<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_primary"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="151dp"
        android:layout_height="158dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/blue_secondary"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/app_name_login"
        android:textAlignment="center"
        android:textColor="@color/blue_secondary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="190dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_description_app_login"
        android:textAlignment="center"
        android:textColor="@color/blue_secondary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView42"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/textView42"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />

    <Button
        android:id="@+id/btn_login_no_connection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange"
        android:text="@string/btn_login_no_conection"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ProgressBar
        android:id="@+id/indeterminateBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/textView43"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

</androidx.constraintlayout.widget.ConstraintLayout>